fix input boxes overflowing containers

--- a/statusboard/src/components/ProjectsTable/ProjectsTable.scss
+++ b/statusboard/src/components/ProjectsTable/ProjectsTable.scss
@@ -20,8 +20,9 @@
     table-layout:fixed;
   }
 
-  a {
-  }
+  th:nth-of-type(2){
+    width:40%;
+  } 
 
   th {
     background-color: var(--cfa-purple-dark);
